--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   </div>
 
 <script>
-const API_URL = "http://127.0.0.1:3000/backend/data.php";   // مسیر API
-const ADMIN_PASS = "admin123";    // پسورد ادمین
+const API_URL = "http://127.0.0.1:3000/backend/data.php";   //  API rout
+const ADMIN_PASS = "admin123";    // admin pass
 let userId = null;
 let currentQuestion = 0;
 
