--- a/index.html
+++ b/index.html
@@ -57,12 +57,28 @@ let userId = null;
 let currentQuestion = 0;
 
 const questions = [
-  {q:"سوال ۱ (متن نمونه)", answers:["جواب ۱", "جواب ۲"]},
-  {q:"سوال ۲ (متن نمونه)", answers:["گزینه الف", "گزینه ب"]},
-  {q:"سوال ۳ (متن نمونه)", answers:["انتخاب اول", "انتخاب دوم"]},
-  {q:"سوال ۴ (متن نمونه)", answers:["بله", "خیر"]},
-  {q:"سوال ۵ (متن نمونه)", answers:["گزینه یک", "گزینه دو"]}
+  {
+    q: "دوست داری خونه‌ت تو چه جور طبیعتی قرار داشته باشه؟",
+    answers: ["کنار دریا", "وسط جنگل", "نزدیک کوه", "در شهر"]
+  },
+  {
+    q: "چه آب و هوایی برات لذتبخش‌تره؟",
+    answers: ["آفتابی و گرم", "خنک و بارونی", "سرد و برفی", "ملایم و معتدل"]
+  },
+  {
+    q: "بیشتر به چه فضاهایی علاقه‌مندی؟",
+    answers: ["مدرن و تکنولوژیک", "سنتی و نوستالژیک", "مینیمال و ساده", "لوکس و شیک"]
+  },
+  {
+    q: "کدام نوع رنگ در دکوراسیون خانه را ترجیح می‌دهی؟",
+    answers: ["رنگ‌های روشن", "رنگ‌های تیره", "رنگ‌های طبیعی و خاکی", "رنگ‌های شاد و متنوع"]
+  },
+  {
+    q: "چه نوع نورپردازی‌ای برای خانه دوست داری؟",
+    answers: ["نور طبیعی فراوان", "چراغ‌های ملایم و گرم", "چراغ‌های مدرن و LED", "ترکیبی از همه"]
+  }
 ];
+
 const MAX_QUESTIONS = questions.length;
 async function continueGame() {
   // Fetch the current game state from the API
