--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
 <script>
 const API_URL = "http://127.0.0.1:3000/backend/data.php";   //  API rout
+// const API_URL = "http://192.168.93.88:3000/backend/data.php";   //  API rout
 const ADMIN_PASS = "admin123";    // admin pass
 let userId = null;
 let currentQuestion = 0;
