--- a/game_web/index.html
+++ b/game_web/index.html
@@ -14,8 +14,10 @@
     <!-- Registration Form -->
     <div id="registerForm">
       <input type="text" id="fullName" placeholder="نام و نام خانوادگی" class="form-input" />
-      <input type="text" id="phoneNumber" placeholder="شماره موبایل" class="form-input" />
-      <input class="js-kioskboard-input" data-kioskboard-type="numpad" data-kioskboard-placement="bottom" placeholder="Your Number" />
+      <input  
+        type="text" id="phoneNumber" placeholder="شماره موبایل" class="form-input " 
+  inputmode="numeric" 
+      />
     </div>
     <div id="content">
       <button class="btn" id="startBtn">شروع بازی</button>
